Remove superfluous jvm arg